# gemtts

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: audio.rs  catalog.rs  cli.rs  config.rs  error.rs  gemini.rs  guard.rs  main.rs  prompt.rs  usage.rs
src/commands/: agent_info.rs  auth.rs  catalog.rs  config.rs  mod.rs  skill.rs  tts.rs  update.rs  usage.rs
tests/: agent_info_contract.rs  exit_code_contracts.rs  output_contracts.rs  robustness.rs
